<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/d_16"
            android:layout_marginEnd="@dimen/d_16"
            android:layout_marginTop="@dimen/d_16"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d_8"
                android:layout_marginStart="@dimen/d_8"
                android:layout_marginTop="@dimen/d_8"
                android:layout_marginEnd="@dimen/d_8"
        >

            <ImageView
                    android:id="@+id/iv_picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />
            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_picture"
                    android:layout_marginStart="@dimen/d_8"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
            />

            <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintStart_toEndOf="@id/iv_picture"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
            />

            <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_full_name"
                    app:layout_constraintStart_toEndOf="@id/iv_picture"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
            />

            <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/iv_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_16"
            />

            <TextView
                    android:id="@+id/tv_license1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_url"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/license"
                    android:layout_marginTop="@dimen/d_16"
            />

            <TextView
                    android:id="@+id/tv_license2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_url"
                    app:layout_constraintStart_toEndOf="@id/tv_license1"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/none"
                    android:layout_marginTop="@dimen/d_16"
            />

            <TextView
                    android:id="@+id/tv_score1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_license1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/score"
            />

            <TextView
                    android:id="@+id/tv_score2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_license2"
                    app:layout_constraintStart_toEndOf="@id/tv_score1"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
            />

            <TextView
                    android:id="@+id/tv_watchers1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_score1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/watchers"
            />

            <TextView
                    android:id="@+id/tv_watchers2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_license2"
                    app:layout_constraintStart_toEndOf="@id/tv_watchers1"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
            />

            <TextView
                    android:id="@+id/tv_forks1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_watchers1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/forks"
            />

            <TextView
                    android:id="@+id/tv_forks2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_watchers2"
                    app:layout_constraintStart_toEndOf="@id/tv_forks1"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
            />

            <TextView
                    android:id="@+id/tv_issues1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_forks1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
                    android:text="@string/opened_issues"
            />

            <TextView
                    android:id="@+id/tv_issues2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_forks2"
                    app:layout_constraintStart_toEndOf="@id/tv_issues1"
                    android:layout_marginStart="@dimen/d_8"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_14"
            />

            <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_16"
                    app:layout_constraintTop_toBottomOf="@id/tv_issues1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/d_8"
                    android:textStyle="italic"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/s_16"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>